--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8730,205 +8730,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #18c1b7; }
+  background: #20d593; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #ccb710; }
+  background: #1b095d; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #8b7ece; }
+  background: #c3a908; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #6d9c0a; }
+  background: #b52be3; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #1231b1; }
+  background: #fcd853; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #6431c6; }
+  background: #f6292a; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #5cc3ca; }
+  background: #c8455b; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #f68ede; }
+  background: #d05b44; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #8daca8; }
+  background: #7c6d48; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #f5cd6c; }
+  background: #a25d60; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #81b131; }
+  background: #bcde2d; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #d503d3; }
+  background: #82aa97; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #495f39; }
+  background: #a52260; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #3fe361; }
+  background: #ac4607; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #1b6b87; }
+  background: #cd5e8e; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #9711dc; }
+  background: #9f3531; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #35361f; }
+  background: #660aa1; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #2b8370; }
+  background: #6c5eaa; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #0cb07d; }
+  background: #b78b6a; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #b5895c; }
+  background: #747818; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #4de5b6; }
+  background: #542950; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #f3894e; }
+  background: #d77f9a; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #299fec; }
+  background: #4f646b; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #68ba07; }
+  background: #77401b; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #4a06e0; }
+  background: #3915a8; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #0c4a27; }
+  background: #a37a77; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #c69a35; }
+  background: #82c806; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #795b26; }
+  background: #80eee3; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #4e1f4a; }
+  background: #3220a0; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #5cd797; }
+  background: #0fb6e5; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #66f8ba; }
+  background: #9ecf59; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #f888eb; }
+  background: #ef20b8; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #81aa98; }
+  background: #d60c63; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #24fd53; }
+  background: #3984ee; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #2c9b97; }
+  background: #fc321f; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #04b3ba; }
+  background: #c03f2b; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #1b197e; }
+  background: #ba0d33; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #fe5fa6; }
+  background: #ce9e98; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #4bc72d; }
+  background: #8b3571; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #7783f0; }
+  background: #f0f883; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #3862d0; }
+  background: #eee313; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #110cf9; }
+  background: #ef9085; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #d10ca4; }
+  background: #028b03; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #1b570e; }
+  background: #f5823f; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #c5cbe0; }
+  background: #1fc8aa; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #9a020f; }
+  background: #e01443; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #895d6d; }
+  background: #b96ffe; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #86a6c6; }
+  background: #ecaeb7; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #f681e0; }
+  background: #e0150d; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #784889; }
+  background: #0c7d06; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #3934f1; }
+  background: #7ea9a2; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #9689d3; }
+  background: #d2e24d; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #351a7f; }
+  background: #70e23c; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #380af0; }
+  background: #b801e2; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #b24c79; }
+  background: #2aa90c; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #3c7313; }
+  background: #cf81e0; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #089bd2; }
+  background: #045e19; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #0d2142; }
+  background: #a1c99a; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #f6747c; }
+  background: #9de667; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #4272b6; }
+  background: #db3421; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #3e45e8; }
+  background: #b7cd11; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #dd5651; }
+  background: #3c3a36; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #1fb004; }
+  background: #9392db; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #f8314d; }
+  background: #d413f0; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #0fbeaa; }
+  background: #ade89a; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #34455b; }
+  background: #04dbf3; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #323f9f; }
+  background: #48fa0e; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #ed45b1; }
+  background: #f2907c; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #a3f26e; }
+  background: #95b989; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #e76a0d; }
+  background: #648088; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #83ea7e; }
+  background: #c36f0d; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #7378b8; }
+  background: #344289; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #be9338; }
+  background: #310d2b; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #1632b6; }
+  background: #4c9442; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #66fab7; }
+  background: #689807; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #3c9f05; }
+  background: #d22313; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #7846bf; }
+  background: #fe7f4e; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #980ec7; }
+  background: #9e4cd3; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #234dbd; }
+  background: #50b257; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #525705; }
+  background: #449ef9; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #06120d; }
+  background: #3c2e19; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #dbae16; }
+  background: #91fbd7; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #e88d2b; }
+  background: #a7a6ea; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #de19a4; }
+  background: #233328; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #838123; }
+  background: #66e166; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #b6e348; }
+  background: #180274; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #052954; }
+  background: #f96be6; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #d612f9; }
+  background: #b7d438; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #22a7f3; }
+  background: #ade5c5; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #f6de67; }
+  background: #8f8cff; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #da9af2; }
+  background: #f7ada1; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #623720; }
+  background: #7e7a63; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #dcced0; }
+  background: #7b6c4b; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #ba6acc; }
+  background: #4e240a; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #cdaaac; }
+  background: #5a1042; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #d89627; }
+  background: #d51ec7; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #e8a7f1; }
+  background: #42c0ff; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #386ff9; }
+  background: #f7cfd6; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #5a688d; }
+  background: #b02063; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #b5d266; }
+  background: #b3e0cf; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -14661,9 +14661,10 @@ option {
       padding-top: 30px;
       color: #4C4C4C; }
       .poclicy-center-main-warpper .conditions-select-boxs .multiselect #checkboxes .check-container {
-        margin-bottom: 33px; }
+        margin-bottom: 33px;
+        color: #4C4C4C; }
       .poclicy-center-main-warpper .conditions-select-boxs .multiselect #checkboxes label {
-        font-size: 12px;
+        font-size: 14px;
         position: relative; }
       .poclicy-center-main-warpper .conditions-select-boxs .multiselect #checkboxes .checkmark {
         position: absolute;
