--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -3159,10 +3159,11 @@ option {
 
         .check-container {
           margin-bottom: 33px;
+          color: #4C4C4C;
         }
 
         label {
-          font-size: 12px;
+          font-size: 14px;
           position: relative;
         }
 
