--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8730,205 +8730,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #20d593; }
+  background: #9e2cbc; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #1b095d; }
+  background: #dd6de3; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #c3a908; }
+  background: #3138e2; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #b52be3; }
+  background: #b77323; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #fcd853; }
+  background: #dec2a9; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #f6292a; }
+  background: #af97aa; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #c8455b; }
+  background: #061d6c; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #d05b44; }
+  background: #9eb6ec; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #7c6d48; }
+  background: #2fd572; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #a25d60; }
+  background: #03915d; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #bcde2d; }
+  background: #e6c349; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #82aa97; }
+  background: #381e0a; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #a52260; }
+  background: #d3bcfc; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #ac4607; }
+  background: #231014; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #cd5e8e; }
+  background: #b2e6fc; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #9f3531; }
+  background: #76f87f; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #660aa1; }
+  background: #02f53c; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #6c5eaa; }
+  background: #2bf17f; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #b78b6a; }
+  background: #685125; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #747818; }
+  background: #200336; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #542950; }
+  background: #315b39; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #d77f9a; }
+  background: #663cda; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #4f646b; }
+  background: #a3ac34; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #77401b; }
+  background: #a12851; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #3915a8; }
+  background: #b781d0; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #a37a77; }
+  background: #29096e; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #82c806; }
+  background: #b6fa42; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #80eee3; }
+  background: #2aa0b1; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #3220a0; }
+  background: #3e27f1; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #0fb6e5; }
+  background: #baa43c; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #9ecf59; }
+  background: #90035c; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #ef20b8; }
+  background: #84bd10; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #d60c63; }
+  background: #0f654d; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #3984ee; }
+  background: #cfa5c1; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #fc321f; }
+  background: #261db4; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #c03f2b; }
+  background: #9014f6; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #ba0d33; }
+  background: #1411db; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #ce9e98; }
+  background: #8809c4; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #8b3571; }
+  background: #d335e2; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #f0f883; }
+  background: #a06476; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #eee313; }
+  background: #4c5301; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #ef9085; }
+  background: #5a36d0; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #028b03; }
+  background: #5b65be; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #f5823f; }
+  background: #77ae25; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #1fc8aa; }
+  background: #509ac9; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #e01443; }
+  background: #dc2831; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #b96ffe; }
+  background: #b0267a; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #ecaeb7; }
+  background: #a26eb5; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #e0150d; }
+  background: #794237; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #0c7d06; }
+  background: #cbd0d2; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #7ea9a2; }
+  background: #faabc8; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #d2e24d; }
+  background: #1dc81a; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #70e23c; }
+  background: #b0d51c; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #b801e2; }
+  background: #fd77b3; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #2aa90c; }
+  background: #b80a31; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #cf81e0; }
+  background: #4518b2; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #045e19; }
+  background: #aba7ff; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #a1c99a; }
+  background: #da4e17; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #9de667; }
+  background: #85adbc; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #db3421; }
+  background: #99aba4; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #b7cd11; }
+  background: #5b59c1; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #3c3a36; }
+  background: #5483ed; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #9392db; }
+  background: #105186; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #d413f0; }
+  background: #5cb6a2; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #ade89a; }
+  background: #96739d; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #04dbf3; }
+  background: #95a4dc; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #48fa0e; }
+  background: #6fb3b8; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #f2907c; }
+  background: #ef11c4; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #95b989; }
+  background: #2473e1; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #648088; }
+  background: #3aebba; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #c36f0d; }
+  background: #d2f463; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #344289; }
+  background: #83bc3f; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #310d2b; }
+  background: #254f1f; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #4c9442; }
+  background: #8f7849; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #689807; }
+  background: #8a035f; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #d22313; }
+  background: #28eec9; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #fe7f4e; }
+  background: #41bb59; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #9e4cd3; }
+  background: #cac318; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #50b257; }
+  background: #2f6d8b; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #449ef9; }
+  background: #4fc03a; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #3c2e19; }
+  background: #fde88c; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #91fbd7; }
+  background: #ebc04d; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #a7a6ea; }
+  background: #ae839c; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #233328; }
+  background: #3a6345; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #66e166; }
+  background: #5d81bf; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #180274; }
+  background: #df35a6; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #f96be6; }
+  background: #9cb778; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #b7d438; }
+  background: #f8043f; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #ade5c5; }
+  background: #aa9953; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #8f8cff; }
+  background: #2a73f8; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #f7ada1; }
+  background: #6d330e; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #7e7a63; }
+  background: #1c44e7; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #7b6c4b; }
+  background: #449e07; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #4e240a; }
+  background: #6b4330; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #5a1042; }
+  background: #cc694b; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #d51ec7; }
+  background: #04b8b4; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #42c0ff; }
+  background: #57b6cd; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #f7cfd6; }
+  background: #0ebd92; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #b02063; }
+  background: #7a317b; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #b3e0cf; }
+  background: #31fbcd; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -14611,7 +14611,9 @@ option {
   padding-top: 35px; }
   .poclicy-center-main-warpper h2 {
     font-size: 18px;
-    margin-top: 15px; }
+    font-weight: 600;
+    color: #4C4C4C;
+    margin-top: 25px; }
   .poclicy-center-main-warpper label {
     font-size: 16px; }
   .poclicy-center-main-warpper .custom-select {
@@ -14644,6 +14646,8 @@ option {
       align-items: center;
       margin-bottom: 25px;
       width: 100%; }
+      .poclicy-center-main-warpper .gray-border-bottom-actions .actions-field-wrapper:last-child {
+        margin-bottom: 10px; }
       .poclicy-center-main-warpper .gray-border-bottom-actions .actions-field-wrapper .min-filed-width {
         min-width: 450px; }
       .poclicy-center-main-warpper .gray-border-bottom-actions .actions-field-wrapper .dropdown-with-img {
